@startuml
'https://plantuml.com/sequence-diagram

interface Strategy {
    + {abstract} List<BaseBullet> shootStrategy
}

class StraightShootStrategy {
    - aircraft: AbstractAircraft
    + StraightShootStrategy(AbstractAircraft aircraft)
    + shootStrategy(): List<BaseBullet>
}

class ScatterShootStrategy {
    - aircraft: AbstractAircraft
    + ScatterShootStrategy(AbstractAircraft aircraft)
    + shootStrategy(): List<BaseBullet>
}

class RingShootStrategy {
    - aircraft: AbstractAircraft
    + RingShootStrategy(AbstractAircraft aircraft)
    + shootStrategy(): List<BaseBullet>
}

Strategy <|.. StraightShootStrategy
Strategy <|.. ScatterShootStrategy
Strategy <|.. RingShootStrategy

class Context {
    - strategy: Strategy
    + Context()
    + setStrategy(Strategy strategy): void
    + executeStrategy(): List<BaseBullet>
}

Context o--> Strategy
@enduml